--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <script type="text/javascript" src="UI_Game.js"></script>
         <script type="text/javascript" src="UI_Health.js"></script>
         <script type="text/javascript" src="Counter_Power.js"></script>
-        <script type="text/javascript" src="Item_PowerUp.js"></script>
+        <script type="text/javascript" src="SpawnData.js"></script>
+        <script type="text/javascript" src="EnemySet.js"></script>
         
         <script type="text/javascript" src="main.js"></script>
     
